// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image constructor call with format \`makeswift::controls::image::format::url\` returns versioned definition 1`] = `
ImageDefinition {
  "config": {
    "format": "makeswift::controls::image::format::url",
    "label": "Image",
  },
  "version": 1,
}
`;

exports[`Image constructor call with format \`makeswift::controls::image::format::with-dimensions\` returns versioned definition 1`] = `
ImageDefinition {
  "config": {
    "format": "makeswift::controls::image::format::with-dimensions",
    "label": "Image",
  },
  "version": 1,
}
`;

exports[`Image constructor call with format \`undefined\` returns versioned definition 1`] = `
ImageDefinition {
  "config": {
    "format": undefined,
    "label": "Image",
  },
  "version": 1,
}
`;

exports[`Image toData returns v1 data for \`{
  type: 'external-file',
  url: 'https://example.com/image.jpg',
  width: 100,
  height: 100
}\` when definition version is 1 1`] = `
{
  "height": 100,
  "type": "external-file",
  "url": "https://example.com/image.jpg",
  "version": 1,
  "width": 100,
}
`;

exports[`Image toData returns v1 data for \`{ type: 'external-file', url: 'https://example.com/image.jpg' }\` when definition version is 1 1`] = `
{
  "type": "external-file",
  "url": "https://example.com/image.jpg",
  "version": 1,
}
`;

exports[`Image toData returns v1 data for \`{ type: 'makeswift-file', id: 'fake-file-id' }\` when definition version is 1 1`] = `
{
  "id": "fake-file-id",
  "type": "makeswift-file",
  "version": 1,
}
`;

exports[`Image toData throws error for external image value on v0 definition 1`] = `"Invalid ValueType for Image v0: {"type":"external-file","url":"https://example.com/image.jpg"}"`;
